--- a/EvidencePojisteniWeb/Views/Pojisteni/Edit.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojisteni/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="TypPojisteni" class="control-label"></label>
-                <input asp-for="TypPojisteni" class="form-control" />
+                <select asp-for="TypPojisteni" class="form-control" asp-items="Html.GetEnumSelectList<TypPojisteni>()"></select>
                 <span asp-validation-for="TypPojisteni" class="text-danger"></span>
             </div>
             <div class="form-group">
