--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Role" class="control-label"></label>
-                <select asp-for="Role" class="form-control"></select>
+                <select asp-for="Role" class="form-control" asp-items="Html.GetEnumSelectList<RoleVuciPojisteni>()"></select>
                 <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group">
