Úprava PojistenecControler metodyCreate a Edit (GET, POST). úprava PojisteniOsobyModel a enum RoleVuciPojisteni Úprava Views Home index, Pojistenec index, _Layout

--- a/EvidencePojisteniWeb/Views/Home/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 událostem. Naše aplikace je zdarma a bez reklam. Stačí se zaregistrovat a můžete si vybrat z našich produktů, které
                 Vám nabízejí širokou škálu možností pojištění, proti nechtěným událostem.</p>
                 
-                <button class="btn btn-success btn-lg" type="button">Vsupte do portálu</button>
+                <button class="btn btn-success btn-lg" type="button" src="">Vsupte do portálu</button>
             </div>
         </div>
 
