--- a/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
+++ b/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
@@ -13,24 +13,37 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark text-light bg-dark box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand fw-bold" asp-area="" asp-controller="Home" asp-action="Index">Evidence pojištění</a>
+                <a class="navbar-brand fw-bold @(ViewContext.RouteData.Values["controller"]?.ToString()
+                  ==
+                "Home" && ViewContext.RouteData.Values["action"]?.ToString() == "Index" ? "text-warning" : "text-light")"
+                asp-area="" asp-controller="Home" asp-action="Index">Evidence pojištění</a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav nav-underline justify-content-center flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Pojistenec" asp-action="Index">Pojistenci</a>
+                            <a class="nav-link text-light @(ViewContext.RouteData.Values["controller"]?.ToString() 
+                                == 
+                            "Pojistenec" ? "active fw-bold" : "")" asp-area="" asp-controller="Pojistenec" asp-action="Index">Pojištěnci</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Pojisteni" asp-action="Index">Pojištění</a>
+                            <a class="nav-link text-light @(ViewContext.RouteData.Values["controller"]?.ToString()
+                                ==
+                            "Pojisteni" ? "active fw-bold" : "")" asp-area="" asp-controller="Pojisteni" asp-action="Index">Pojištění</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="PojistnaUdalost" asp-action="Index">Události</a>
+                            <a class="nav-link text-light @(ViewContext.RouteData.Values["controller"]?.ToString()
+                                ==
+                            "PojistnaUdalost" ? "active fw-bold" : "")" asp-area="" asp-controller="PojistnaUdalost" asp-action="Index">Události</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">O aplikaci...</a>
+                            <a class="nav-link text-light @(ViewContext.RouteData.Values["action"]?.ToString()
+                                ==
+                            "Privacy" ? "active fw-bold" : "")" asp-area="" asp-controller="Home" asp-action="Privacy">O aplikaci...</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
