--- a/EvidencePojisteniWeb/Views/Home/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                 událostem. Naše aplikace je zdarma a bez reklam. Stačí se zaregistrovat a můžete si vybrat z našich produktů, které
                 Vám nabízejí širokou škálu možností pojištění, proti nechtěným událostem.</p>
                 
-                <button class="btn btn-success btn-lg" type="button" src="">Vsupte do portálu</button>
+                <a class="btn btn-success btn-lg" type="button" asp-controller="Pojistenec" asp-action="Index">Vsupte do portálu</a>
             </div>
         </div>
 
@@ -26,7 +26,7 @@
                 <div class="h-100 p-4 text-bg-success rounded-3">
                     <h2>Pojištění</h2>
                     <p>Stačí kliknout a podívat se v rychlém přehledu jaké možnosti tyto stránky nabízejí.</p>
-                    <button class="btn btn-outline-light" type="button">Podívat se na pojištění</button>
+                    <a class="btn btn-outline-light" type="button" asp-controller="Pojisteni" asp-action="Index">Podívat se na pojištění</a>
                 </div>
             </div>
             <div class="col-md-6">
@@ -34,7 +34,7 @@
                     <h2>Přihlášení na naše stránky</h2>
                     <p>Přihlášení na stránky Evidence pojištění Vás posune blíž k jistějším zítřkům. S námi se můžete cítit ve větším
                     bezpečí a plně se soustředit na prožívání života.</p>
-                    <button class="btn btn-success" type="button">Přihlásit se</button>
+                    <a class="btn btn-success" type="button" asp-area="Identity" asp-page="/Account/Login">Přihlásit se</a>
                 </div>
             </div>
         </div>
