--- a/EvidencePojisteniWeb/Views/Pojistenec/Delete.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Delete.cshtml
@@ -1,16 +1,19 @@
 ﻿@model EvidencePojisteniWeb.Models.PojistenecModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Odstranění pojištěnce";
 }
 
-<h1>Delete</h1>
+<div class="container">
+    <header class="pb-2 border-bottom">
+        <h4 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+            @ViewData["Title"]
+        </h4>
+    </header>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PojistenecModel</h4>
-    <hr />
-    <dl class="row">
+    <h3 class="text-danger text-center mt-2">Opravdu si přejete odstranit tohoto pojištěnce?</h3>
+
+    <dl class="row mt-5">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Jmeno)
         </dt>
@@ -69,7 +72,9 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-lg btn-danger" />
+        <div class="mt-5">
+            <a asp-action="Index">Back to List</a>
+        </div>
     </form>
 </div>
