--- a/EvidencePojisteniWeb/Views/Pojistenec/Details.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Details.cshtml
@@ -1,72 +1,79 @@
 ﻿@model EvidencePojisteniWeb.Models.PojistenecModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detail pojištěnce";
 }
 
-<h1>Details</h1>
+<div class="container">
+    <header class="pb-2 mb-4 border-bottom">
+        <h4 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+            @ViewData["Title"]
+        </h4>
+    </header>
 
-<div>
-    <h4>PojistenecModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Jmeno)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Jmeno)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Prijmeni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Prijmeni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DatumNarozeni)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DatumNarozeni)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UliceCpCe)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UliceCpCe)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Mesto)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Mesto)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PSC)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PSC)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Stat)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Stat)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefon)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefon)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="container mt-4">
+        <div class="row border-bottom pb-4">
+            <div class="col-md-3 text-center">
+                <!-- Obrázek nebo placeholder -->
+                <img src="https://via.placeholder.com/150" class="img-thumbnail" alt="Foto pojištěnce" />
+            </div>
+
+            <div class="col-md-4">
+                <h3>@Model.Jmeno @Model.Prijmeni</h3>
+                <p>@Model.UliceCpCe</p> 
+                <p>@Model.PSC @Model.Mesto</p>
+                <p>@Model.Stat</p>
+            </div>
+            <div class="col-md-4">
+                <p><strong>Datum narození:</strong> @Model.DatumNarozeni.ToShortDateString()</p>
+                <p><strong>Email:</strong> @Html.DisplayFor(model => model.Email)</p>
+                <p><strong>Telefon:</strong> @Model.Telefon</p>
+            </div>
+        </div>
+
+    </div>
+        
+    <h4 class="mt-4">Sjednaná pojištění</h4>
+
+    @if (Model.PojisteniOsoby != null && Model.PojisteniOsoby.Any())
+    {
+        <table class="table table-striped table-hover table-bordered">
+            <thead class="table-primary">
+                <tr>
+                    <th>Typ pojištění</th>
+                    <th>Částka v Kč</th>
+                    <th>Akce</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var vztah in Model.PojisteniOsoby)
+                {
+                    <tr>
+                        <td>@vztah.Pojisteni?.TypPojisteni</td>
+                        <td>@vztah.Pojisteni?.Castka.ToString("N0") + " Kč"</td>
+                        <td>
+                            <a asp-controller="PojisteniOsoby" asp-action="Edit" asp-route-id="@vztah.Id"
+                                class="btn btn-sm btn-warning">Editovat</a>
+                            <a asp-controller="PojisteniOsoby" asp-action="Delete" asp-route-id="@vztah.Id"
+                                class="btn btn-sm btn-danger">Odstranit</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p class="text-muted">Žádná pojištění nebyla sjednána.</p>
+    }
+
+    <div class="mt-4 d-flex gap-2">
+        <a asp-controller="PojisteniOsoby" asp-action="Create" asp-route-pojistenecId="@Model.Id" class="btn btn-primary">Přidat pojištění</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editovat pojištěnce</a>
+        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Odstranit pojištěnce</a>
+    </div>
+
+    <div class="mt-5">
+        <a asp-action="Index">Back to List</a>
+    </div>
 </div>
