--- a/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
+++ b/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EvidencePojisteniWeb.styles.css" asp-append-version="true" />
+
+    <style>
+        .nav-underline .nav-link:hover {
+            border-bottom: 2px solid #007bff;
+            color: yellowgreen !important;
+        }
+
+        .nav-underline .nav-link.active {
+            border-bottom: 2px solid #007bff;
+            color: yellowgreen !important;
+        }
+    </style>
 </head>
 <body>
     <header class="sticky-top">
