Úprava PojisteniOsobyController (Create, Edit); Migrace Update-Database dbContext; Úprava view pro PojisteniOsoby; Úprava modelu pro PojisteniOsobyModel;

--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
@@ -1,38 +1,94 @@
 ﻿@model EvidencePojisteniWeb.Models.PojisteniOsobyModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nové pojištění";
+    var pojistenec = ViewBag.Pojistenec as PojistenecModel;
+    var typy = ViewBag.TypPojisteni as List<TypPojisteni>;
+    var role = ViewBag.Role as List<RoleVuciPojisteni>;
 }
 
-<h1>Create</h1>
+<div class="container">
+    <header class="pb-2 border-bottom">
+        <h4 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+            @ViewData["Title"] pro &nbsp;<strong>@pojistenec?.Jmeno @pojistenec?.Prijmeni</strong>
+        </h4>
+    </header>
 
-<h4>PojisteniOsobyModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+    <div class="container mt-4 text-white bg-success p-4 rounded-3">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="OsobaId" class="control-label"></label>
-                <select asp-for="OsobaId" class ="form-control" asp-items="ViewBag.OsobaId"></select>
+            @Html.AntiForgeryToken()
+
+            <input type="hidden" asp-for="OsobaId" />
+
+            <div class="mb-3">
+                <label class="form-label">E-mail</label>
+                <input class="form-control" value="@pojistenec?.Email" readonly />
             </div>
-            <div class="form-group">
-                <label asp-for="PojisteniId" class="control-label"></label>
-                <select asp-for="PojisteniId" class ="form-control" asp-items="ViewBag.PojisteniId"></select>
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label asp-for="Pojisteni.TypPojisteni" class="form-label"></label>
+                    <select asp-for="Pojisteni.TypPojisteni" class="form-select">
+                        @foreach (var typ in typy!)
+                        {
+                            <option value="@typ">@typ</option>
+                        }
+                    </select>
+                    <span asp-validation-for="Pojisteni.TypPojisteni" class="text-danger"></span>
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label asp-for="Role" class="form-label"></label>
+                    <select asp-for="Role" class="form-select">
+                        @foreach (var r in role!)
+                        {
+                            <option value="@r">@r</option>
+                        }
+                    </select>
+                    <span asp-validation-for="Role" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Role" class="control-label"></label>
-                <select asp-for="Role" class="form-control" asp-items="Html.GetEnumSelectList<RoleVuciPojisteni>()"></select>
-                <span asp-validation-for="Role" class="text-danger"></span>
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label asp-for="Pojisteni.PredmetPojisteni" class="form-label"></label>
+                    <input asp-for="Pojisteni.PredmetPojisteni" class="form-control" />
+                    <span asp-validation-for="Pojisteni.PredmetPojisteni" class="text-danger"></span>
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label asp-for="Pojisteni.Castka" class="form-label"></label>
+                    <input asp-for="Pojisteni.Castka" class="form-control" />
+                    <span asp-validation-for="Pojisteni.Castka" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label asp-for="PlatnostOd" class="form-label"></label>
+                    <input asp-for="PlatnostOd" type="date" class="form-control" />
+                    <span asp-validation-for="PlatnostOd" class="text-danger"></span>
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label asp-for="PlatnostDo" class="form-label"></label>
+                    <input asp-for="PlatnostDo" type="date" class="form-control" />
+                    <span asp-validation-for="PlatnostDo" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="mt-4 text-center">
+                <input type="submit" value="Uložit pojištění" class="btn btn-outline-light" />
             </div>
         </form>
     </div>
+    <div class="mt-5">
+        <a asp-controller="Pojistenec" asp-action="Details" asp-route-id="@Model.OsobaId">Back to List</a>
+    </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
