--- a/EvidencePojisteniWeb/Views/Pojistenec/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Create.cshtml
@@ -11,7 +11,7 @@
         </h4>
     </header>
 
-    <div class="container mt-4 text-light bg-success p-4 rounded-3">
+    <div class="container mt-4 text-white bg-success p-4 rounded-3">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
